[package]
name = "solblog"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "solblog"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.16.1"
solana-program = "1.7.11"
metaplex-token-metadata = { version = "0.0.1", features = ["no-entrypoint"] }
gem_common = {path='../../lib/gem_common'}
#proc_macros = {path='../../lib/proc_macros'}
arrayref = "0.3.6"
bitflags = "1.3.2"
